--- a/src/main/objc/BUILD
+++ b/src/main/objc/BUILD
@@ -6,6 +6,7 @@ objc_library(
         visibility = ["//visibility:public"],
         deps = [
              "//external:example",
+# Uncommenting the following line shows that the example lib does work when stored locally.
 #              "//example_lib:example",
         ],
 )
